force-app/main/default/objects/Cadence_Task__c/Cadence_Task__c.object-meta.xml
<CustomObject>
    <label>Cadence Task</label>
    <nameField>
        <label>Cadence Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>