force-app/main/default/objects/Cadence_Task__c/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <label>Cadence</label>
    <referenceTo>Cadence__c</referenceTo>
    <relationshipLabel>Cadence Tasks</relationshipLabel>
    <relationshipName>Cadence_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>