force-app/main/default/objects/Cadence_Task__c/fields/Days_After_Prior_Task__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Prior_Task__c</fullName>
    <label>Days After Prior Task</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>