force-app/main/default/objects/Cadence_Task__c/fields/Successor_Task__c.field-meta.xml
<CustomField>
    <fullName>Successor_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Task</label>
    <referenceTo>Cadence_Task__c</referenceTo>
    <relationshipLabel>Cadence Tasks</relationshipLabel>
    <relationshipName>Cadence_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>