force-app/main/default/objects/Cadence_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Cadence__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Days_After_Prior_Task__c</columns>
    <columns>Successor_Task__c</columns>
    <columns>Task_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>